add try/catch in cup controllers if entity is not found

--- a/src/Template/cup/publication/category/form.twig
+++ b/src/Template/cup/publication/category/form.twig
@@ -38,7 +38,7 @@
                                     'type': 'select',
                                     'name': 'parent',
                                     'args': {
-                                        'option': {'': '---'}|merge(list.whereNotIn('uuid', [item.uuid]).pluck('title', 'uuid').all()),
+                                        'option': {'': '---'}|merge(categories.whereNotIn('uuid', [item.uuid]).sortBy('title').pluck('title', 'uuid')),
                                         'selected': item.parent_uuid
                                     }
                                 } %}
