fix deletion cascade

--- a/src/Template/cup/publication/category/form.twig
+++ b/src/Template/cup/publication/category/form.twig
@@ -51,7 +51,7 @@
                                     'name': 'public',
                                     'args': {
                                         'option': _(['yes', 'no']),
-                                        'selected': category.public ? 'yes' : 'no'
+                                        'selected': (category ? category.public : true) ? 'yes' : 'no'
                                     }
                                 } %}
                             </div>
