fix empty delivery

--- a/src/Template/mixin/catalog.twig
+++ b/src/Template/mixin/catalog.twig
@@ -418,7 +418,7 @@
 
                 changeDelivery(uuid) {
                     if (this.cartTotal(false)) {
-                        if (uuid !== delivery) {
+                        if (uuid && uuid !== delivery) {
                             delivery = uuid;
 
                             // first remove exist
