fix reference select status & show status in list

--- a/src/Template/cup/reference/deliveries/form.twig
+++ b/src/Template/cup/reference/deliveries/form.twig
@@ -40,7 +40,7 @@
                                     'name': 'status',
                                     'args': {
                                         'option': _(['yes', 'no']),
-                                        'selected': item.status is empty or item.status ? 'yes' : 'no'
+                                        'selected': item is empty or item.status ? 'yes' : 'no'
                                     }
                                 } %}
                             </div>
