--- a/src/Template/cup/reference/tax-rates/form.twig
+++ b/src/Template/cup/reference/tax-rates/form.twig
@@ -55,7 +55,7 @@
                                     'name': 'status',
                                     'args': {
                                         'option': _(['yes', 'no']),
-                                        'selected': item.status is empty or item.status ? 'yes' : 'no'
+                                        'selected': item is empty or item.status ? 'yes' : 'no'
                                     }
                                 } %}
                             </div>
