--- a/src/Template/cup/reference/address-format/index.twig
+++ b/src/Template/cup/reference/address-format/index.twig
@@ -36,7 +36,15 @@
                             {% for item in list.sortBy('order') %}
                                 <div class="row">
                                     <div class="col col-sm-1 d-none d-sm-block">{{ item.order }}</div>
-                                    <div class="col">{{ item.title }}</div>
+                                    <div class="col">
+                                        {{ item.title }}
+
+                                        <div class="text-black-50 float-right d-none d-lg-inline">
+                                            {% if item.status == 0 %}
+                                                <i class="fas fa-eye-slash" data-toggle="tooltip" data-placement="right" title="{{ 'Disabled'|locale }}"></i>
+                                            {% endif %}
+                                        </div>
+                                    </div>
                                     <div class="col-5">
                                         <pre>{{ item.value.format }}</pre>
                                     </div>
