--- a/src/Template/cup/reference/currencies/index.twig
+++ b/src/Template/cup/reference/currencies/index.twig
@@ -44,6 +44,9 @@
                                             {% if item.value.value == 1 %}
                                                 <i class="fas fa-check" data-toggle="tooltip" data-placement="right" title="{{ 'Default currency'|locale }}"></i>
                                             {% endif %}
+                                            {% if item.status == 0 %}
+                                                <i class="fas fa-eye-slash" data-toggle="tooltip" data-placement="right" title="{{ 'Disabled'|locale }}"></i>
+                                            {% endif %}
                                         </div>
                                     </div>
                                     <div class="col-2 text-center">{{ item.value.code }}</div>
