--- a/src/Template/cup/reference/tax-rates/index.twig
+++ b/src/Template/cup/reference/tax-rates/index.twig
@@ -35,7 +35,15 @@
                             {% for item in list.sortBy('order') %}
                                 <div class="row">
                                     <div class="col col-sm-1 d-none d-sm-block">{{ item.order }}</div>
-                                    <div class="col">{{ item.title }}</div>
+                                    <div class="col">
+                                        {{ item.title }}
+
+                                        <div class="text-black-50 float-right d-none d-lg-inline">
+                                            {% if item.status == 0 %}
+                                                <i class="fas fa-eye-slash" data-toggle="tooltip" data-placement="right" title="{{ 'Disabled'|locale }}"></i>
+                                            {% endif %}
+                                        </div>
+                                    </div>
                                     <div class="col-4 col-sm-3 text-right">
                                         <form action="/cup/reference/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Are you sure you want to delete this element?'|locale }}');">
                                             <div class="btn-group">
